--- a/video-preview.html
+++ b/video-preview.html
@@ -46,8 +46,8 @@
             properties: {
                 stepWidth: Number,
                 steps: Number,
+                step: Number,
                 percentage: Number,
-                value: Number,
                 img: Object,
 
                 roll: {
@@ -80,7 +80,6 @@
             },
 
             mouseLeave: function(){
-                this.value = 1;
                 this.percentage = 100;
                 this.updateDisplay(0);
                 this.$.roll.style.opacity = 0;
@@ -88,30 +87,40 @@
 
             mouseMove: function(event){
 
-                var image = {left: this.img.offsetLeft, top: this.img.offsetTop}
+                var image = this.getPos(this.img) //{left: this.img.offsetLeft, top: this.img.offsetTop}
                   , mouse = {x: event.pageX, y: event.pageY}
                   , cursor = {x: mouse.x - image.left, y: mouse.y - image.top};
+
+            //    console.log(image, mouse, cursor);
 
                 this.frame(cursor.x);
             },
 
+            // http://stackoverflow.com/questions/288699/get-the-position-of-a-div-span-tag
+            getPos: function(el){
+                // yay readability
+                for(var lx = 0, ly = 0;
+                    el != null;
+                    lx += el.offsetLeft, ly += el.offsetTop, el = el.offsetParent);
+
+                return {left: lx, top: ly};
+            },
+
 
             frame: function(x){
-                var width = this.img.clientWidth;
+                var width = this.img.clientWidth
+                  , value = parseFloat((x / width).toFixed(2));
 
-                this.value = parseFloat((x / width).toFixed(2));
-                this.percentage = Math.round(this.value * 100);
-
-                console.log(this.percentage);
+                this.percentage = Math.round(value * 100);
+                this.step = Math.round(this.steps * (this.percentage/100))
 
                 this.updateDisplay();
             },
 
-            // backgroundPositionX is buggy in FF
+            // backgroundPositionX is buggy in FF : solution backgroundPosition "x y"
             // http://stackoverflow.com/questions/13948617/backgroundpositionx-not-working-on-firefox
-            // solution backgroundPosition "x y"
             updateDisplay: function(v){
-                v = (v != undefined) ? v :  this.stepWidth * Math.round(this.steps * -this.value);
+                v = (v != undefined) ? v : -this.stepWidth * this.step;
                 this.$.roll.style.backgroundPosition = v + 'px 0';
             },
 
@@ -119,32 +128,45 @@
 
                 var large = new Image()
                   , small = new Image()
-                  , largeWidth, smallWidth;
+                  , largeWidth, largeHeight
+                  , smallWidth, smallHeight;
 
                 small.onload = function(){
                     smallWidth = small.width;
-                    this.findStep(largeWidth, smallWidth);
+                    smallHeight = small.height;
+
+                    this.findStep(largeWidth, largeHeight, smallWidth, smallHeight);
                 }.bind(this);
 
                 large.onload = function(){
                     this.$.roll.style.backgroundImage = "url('" + this.roll + "')";
                     largeWidth = large.width;
-                    this.findStep(largeWidth, smallWidth);
+                    largeHeight = large.height;
+
+                    this.findStep(largeWidth, largeHeight, smallWidth, smallHeight);
                 }.bind(this);
 
                 large.src = this.roll;
                 small.src = this.img.getAttribute('src');
             },
 
-            findStep: function(rollWidth, srcWidth){
+            findStep: function(rollWidth, rollHeight, srcWidth, srcHeight){
                 if(!rollWidth || !srcWidth) return;
-
                 this.stepWidth = this.img.clientWidth;
+                this.steps = Math.round(rollWidth / srcWidth);
+                this.updateBg();
+            },
 
-                this.steps = Math.round(rollWidth / this.stepWidth);
+            updateBg: function(){
 
-                console.log(rollWidth, this.stepWidth, this.steps);
+              var rollHeight = this.img.clientHeight
+                , rollWidth = this.steps * this.stepWidth;
+
+              this.$.roll.style.backgroundSize = rollWidth +'px '+ rollHeight+'px';
             }
+
+
+
 
         });
 
